feat: implement AIService with WebClient and integrate Google Generative Language API for email response generation