@@ -11,9 +11,8 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
     public class JwtFilter extends OncePerRequestFilter {
@@ -31,6 +30,9 @@ import java.util.Collections;
 
         @Override
         protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+
+            System.out.println("JWT Filter Hit");
+
             String authHeader = request.getHeader("Authorization");
 
             if (authHeader == null || !authHeader.startsWith("Bearer ")) {
@@ -42,29 +44,25 @@ import java.util.Collections;
 
 
             try {
-                String email = jwtService.extractEmail(token);
+                if (jwtService.isTokenValid(token)) {
+                    String email = jwtService.extractEmail(token);
+                    System.out.println("JWT email: " + email);
 
-                if(email != null && SecurityContextHolder.getContext().getAuthentication() == null){
-                    if(jwtService.isTokenValid(token)){
-                        userRepo.findByEmail(email)
-                                .orElseThrow(() -> new RuntimeException("User not found"));
+                    if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+                            userRepo.findByEmail(email)
+                                    .orElseThrow(() -> new RuntimeException("User not found"));
 
-                        UsernamePasswordAuthenticationToken authToken =
-                                new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+                            UsernamePasswordAuthenticationToken authToken =
+                                    new UsernamePasswordAuthenticationToken(email, null, List.of(() -> "ROLE_USER"));
 
-                        SecurityContextHolder.getContext().setAuthentication(authToken);
+                            SecurityContextHolder.getContext().setAuthentication(authToken);
+                        }
+                    } else {
+                        System.out.println("Invalid Token");
                     }
-                }
-
-            } catch (io.jsonwebtoken.ExpiredJwtException e) {
-                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().write("Token expired");
-                return;
             }
             catch (Exception e) {
-                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().write("Invalid JWT token");
-                return;
+                System.out.println("JWT ERROR: " + e.getMessage());
             }
 
             filterChain.doFilter(request, response);
